--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <img src="../../../assets/images/logo.jpg" alt="" style="width: 150px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <img src="../../../assets/images/menu.png" alt="Menu">
+            <img src="../../../assets/images/menu (7).png" alt="Menu">
         </button>
         <div class="offcanvas offcanvas-start custom-offcanvas" data-bs-scroll="true" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
