contact page font size chanhed

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <form class="p-4 rounded custom-form no-shadow g-3 needs-validation" action="/api/contact">
+          <form class="p-4 custom-form no-shadow g-3 needs-validation" action="/api/contact">
             <h3 class="text-center formhead">Let's Plan Your Trip</h3>
             <div class="mb-3">
               <input type="text" class="form-control" placeholder="Name" id="validationServer01 name" name="cusname" required>
