--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -16,7 +16,8 @@
 .nav-link {
     font-size: clamp(16px, 2vw, 18px);
     color: #08154b;
-    font-family: "Poppins", sans-serif;
+    font-family: "Merriweather", serif;
+
 }
 
 .navbrimage {
