--- a/src/app/secondorycomponent/contactform/contactform.component.scss
+++ b/src/app/secondorycomponent/contactform/contactform.component.scss
@@ -23,7 +23,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(8, 8, 8, 0.5); /* Semi-transparent overlay */
+    background: rgba(14, 13, 13, 0.5); /* Semi-transparent overlay */
     z-index: 1;
 }
 
@@ -40,7 +40,7 @@ body, html {
     justify-content: center;
     height: 100%;
     text-align: center;
-    color: rgb(253, 255, 255);
+    color: rgb(255, 255, 255);
     z-index: 2; /* Ensure it is above the overlay */
     overflow: hidden; /* Add this */
 }
@@ -49,10 +49,17 @@ body, html {
     max-width: 90%;
     padding: 60px;
 }
+.content h1{
+	font-family: "PT Serif", serif;
+	color: rgb(240, 240, 240);
+}
 
 .left-section p {
     font-size: 1.2rem; /* Adjust as needed */
     margin-bottom: 2rem;
+	font-family: "Poppins", sans-serif;
+	color: rgb(235, 233, 233);
+
 }
 
 .left-section .contact-info {
@@ -62,6 +69,8 @@ body, html {
 .left-section .contact-info h2 {
     font-size: 1.5rem; /* Adjust as needed */
     margin-bottom: 1rem;
+	font-family: "PT Serif", serif;
+
 }
 
 .left-section .contact-info p {
@@ -100,7 +109,7 @@ body, html {
 }
 
 .search-form {
-    background: rgb(232, 232, 232);
+    background: rgba(232, 232, 232, 0.331);
     width: 80%; /* Adjust width */
     max-width: 500px; /* Max width for large screens */
     border-radius: 10px;
@@ -118,8 +127,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
   
   .custom-form .btn {
-	background-color: #151516;
-	color: orange;
+	background-color: #252323;
+	color: rgb(130, 230, 162);
 	border: none;
 	padding: 10px;
 	font-size: clamp(1rem, 2.5vw, 1.2rem);
@@ -127,10 +136,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 	border-radius: 4px;
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 	transition: background-color 0.3s ease;
+	font-family: "PT Serif", serif;
+
   }
   
   .custom-form .btn:hover {
-	background-color: white;
+	background-color: rgb(51, 50, 50);
+	color: white;
   }
   
   .custom-form .input:focus {
@@ -142,14 +154,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .search-form .formhead {
     margin-bottom: 0.5rem; /* Adjust as needed */
-    font-size: 1.5rem; /* Adjust as needed */
+    font-size: 1.5rem; 
+	color: white;/* Adjust as needed */
 }
 
 .custom-form {
     width: 100%;
     padding: 10px; /* Adjust padding */
     background-color: transparent;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-family: "Poppins", sans-serif;
 }
 
 .custom-form .form-control {
