--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -19,6 +19,60 @@
 
 <div class="container about-welcome-container" *ngIf="true" @slideIn>
   <h4>Welcome to Tour Experts</h4>
-  <p>At Tour Experts, we believe in the magic of travel. Founded with the vision to make every journey a remarkable experience, we have been providing meticulously curated travel packages for years. Our commitment to excellence ensures that you enjoy a seamless and unforgettable journey, filled with comfort and satisfaction.</p>
+  <p class="mt-4">At Tour Experts, we believe in the magic of travel. Founded with the vision to make every journey a remarkable experience, we have been providing meticulously curated travel packages for years. Our commitment to excellence ensures that you enjoy a seamless and unforgettable journey, filled with comfort and satisfaction.</p>
   <p>Choose Tour Experts for a travel experience that is as unique as you are. Let us turn your travel dreams into unforgettable realities, crafted just for you.</p>
 </div>
+<div class="container whytourexpertscontain">
+  <h2 class="text-center mb-5">Why Tour Experts</h2>
+</div>
+<div class="container whycontainer">
+  <div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <!-- Card 1 -->
+      <div class="card mb-3 whytourexperrscard shadow-sm ">
+        <div class="card-body ">
+          <img src="../../../assets/images/help.png" alt="">
+          <h5 class="card-title whycard" >Personalized Service</h5>
+          <p class="card-content">Tailored trips designed to match your unique preferences and interests.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <!-- Card 2 -->
+      <div class="card mb-3 whytourexperrscard shadow-sm ">
+        <div class="card-body">
+          <img src="../../../assets/images/consultation.png" alt="">
+          <h5 class="card-title whycard">Expert Guidance</h5>
+          <p class="card-content">Decades of industry knowledge ensure flawless travel experiences.</p>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <!-- Card 3 -->
+      <div class="card mb-3 whytourexperrscard shadow-sm ">
+        <div class="card-body">
+          <img src="../../../assets/images/tool.png" alt="" class="text-center">
+
+          <h5 class="card-title whycard">Local Expertise</h5>
+          <p class="card-content">Authentic experiences guided by locals with deep regional knowledge.</p>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <!-- Card 4 -->
+      <div class="card mb-3 whytourexperrscard shadow-sm  ">
+
+        <div class="card-body">
+          <img src="../../../assets/images/customer-support.png" alt="">
+
+          <h5 class="card-title whycard">Comprehensive Support</h5>
+          <p class="card-content">24/7 assistance from planning to return for a worry-free journey</p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
