--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -18,12 +18,12 @@
 </div>
 
 <div class="container about-welcome-container" *ngIf="true" @slideIn>
-  <h4>Welcome to Tour Experts</h4>
+  <h2 class="playfair-display">Welcome to Tour Experts</h2>
   <p class="mt-4">At Tour Experts, we believe in the magic of travel. Founded with the vision to make every journey a remarkable experience, we have been providing meticulously curated travel packages for years. Our commitment to excellence ensures that you enjoy a seamless and unforgettable journey, filled with comfort and satisfaction.</p>
   <p>Choose Tour Experts for a travel experience that is as unique as you are. Let us turn your travel dreams into unforgettable realities, crafted just for you.</p>
 </div>
-<div class="container whytourexpertscontain">
-  <h2 class="text-center mb-5">Why Tour Experts</h2>
+<div class="container whytourexpertscontain ">
+  <h2 class="text-center mb-5 playfair-display">Why Tour Experts</h2>
 </div>
 <div class="container whycontainer">
   <div class="row">
@@ -67,7 +67,7 @@
         <div class="card-body">
           <img src="../../../assets/images/customer-support.png" alt="">
 
-          <h5 class="card-title whycard">Comprehensive Support</h5>
+          <h5 class="card-title whycard">Travel Support </h5>
           <p class="card-content">24/7 assistance from planning to return for a worry-free journey</p>
 
         </div>
