--- a/src/app/components/destination/destination.component.html
+++ b/src/app/components/destination/destination.component.html
@@ -1,1 +1,27 @@
-<p>destination works!</p>
+<app-typeheadfilter (keywordSelected)="onKeywordSelected($event)"></app-typeheadfilter>
+
+<div *ngIf="filteredTours.length">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-12 mb-4" *ngFor="let tour of filteredTours">
+        <div class="card">
+          <img [src]="tour.imageUrl" class="card-img-top" alt="{{ tour.name }}">
+          <div class="card-body d-flex flex-column">
+            <div class="d-flex justify-content-between">
+              <span class="location">{{ tour.location }}</span>
+              <span class="type">{{ tour.type }}</span>
+            </div>
+            <p class="card-text mt-2">{{ tour.description }}</p>
+            <div class="overlay">
+              <span>{{ tour.days }} Days</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="!filteredTours.length">
+  <p>No tours found.</p>
+</div>
