--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,5 @@
 <app-homecarousel></app-homecarousel>
 
-<div class="container-fluid">
-	<h2 class="text-center mt-5 mb-5">WELCOME TO TOUR EXPERTS</h2>
-</div>
-<app-packages></app-packages>
-
-<div class="container">
-<h3>Welcome to Tour EXPERTS</h3>
-<p>we believe in the magic of travel. Founded with the vision to make every journey a remarkable experience, we have been providing meticulously curated travel packages for years. Our commitment to excellence ensures that you enjoy a seamless and unforgettable journey, filled with comfort and satisfaction.</p>
-<p>Choose Tour Experts for a travel experience that is as unique as you are. Let us turn your travel dreams into unforgettable realities, crafted just for you.</p>
-</div>
-
 
 
 <section class="traveler-connect py-5">
@@ -52,3 +41,4 @@
 	  </div>
 	</div>
   </section>
+  <app-homepackage></app-homepackage>
