--- a/src/app/secondorycomponent/island/island.component.html
+++ b/src/app/secondorycomponent/island/island.component.html
@@ -1,1 +1,7 @@
-<p>island works!</p>
+<section class="contact-header text-center py-5">
+    <div class="container-fluid bg-image text-center d-flex align-items-center justify-content-center">
+        <div class="content">
+          <h1 class="contactus">ISLAND PACKAGES</h1>
+        </div>
+    </div>
+</section>
