--- a/src/app/components/destination/destination.component.scss
+++ b/src/app/components/destination/destination.component.scss
@@ -1,38 +1,65 @@
-.card {
-	position: relative;
-	border: 1px solid #ddd;
-	border-radius: 8px;
-  }
-  
-  .card-img-top {
-	height: 200px;
-	object-fit: cover;
-  }
-  
-  .card-body {
-	position: relative;
-	padding-bottom: 40px; /* Add extra space at the bottom to accommodate the overlay */
-  }
-  
-  .overlay {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	background-color: rgba(0, 0, 0, 0.5);
-	color: white;
-	padding: 5px 10px;
-	border-top-left-radius: 8px;
-  }
-  
-  .location {
-	font-weight: bold;
-  }
-  
-  .type {
-	font-style: italic;
-  }
-  
-  .card-text {
-	margin-bottom: 30px; /* Add margin to create space between description and the overlay */
-  }
-  
+
+.tourcard .card {
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 100%; /* Ensure cards use full column width */
+  margin: auto; /* Center card */
+}
+
+.tourcard .card-img-wrapper {
+  position: relative;
+}
+
+.tourcard .card-img-top {
+  height: 220px;
+  object-fit: cover;
+  border-bottom: 5px solid #f5f5f5;
+  transition: transform 0.5s ease-in-out;
+}
+
+.tourcard .card-img-top:hover {
+  transform: scale(1.1);
+}
+
+.tourcard .days-overlay {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: rgba(0, 0, 0, 0.6); /* Semi-transparent background for consistent look */
+  color: #fff; /* White text for high contrast */
+  font-size: 14px;
+  font-weight: normal; /* Normal weight for less emphasis */
+  padding: 8px 12px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); /* Light shadow for better visibility */
+}
+
+.tourcard .card-body {
+  padding: 15px; /* Reduce padding */
+  background: linear-gradient(135deg, #f9f9f9, #fff);
+}
+
+.tourcard .d-flex {
+  margin-bottom: 10px; /* Reduce margin */
+}
+
+.tourcard .location, .tourcard .type {
+  font-size: 14px;
+  font-weight: bold;
+  color: #444;
+}
+
+
+
+.tourcard .type {
+  font-style: italic;
+}
+
+.tourcard .card-text {
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
+  margin-bottom: 10px; /* Adjust margin */
+}
