--- a/src/app/secondorycomponent/typeheadfilter/typeheadfilter.component.html
+++ b/src/app/secondorycomponent/typeheadfilter/typeheadfilter.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid ">
+<div class="container-fluid">
 	<div class="row justify-content-center">
 	  <div class="col-12 col-md-8">
 		<div class="input-group">
-		  <input type="text" [(ngModel)]="inputValue" class="form-control" placeholder="Search the Knowledge Base"  />
+		  <input type="text" [(ngModel)]="inputValue" class="form-control" placeholder="Select Your Destination" />
 		  <div class="input-group-append">
 			<button (click)="onSearch()" class="btn btn-primary">
-			  <i class="fa fa-search"></i> <!-- Optional: FontAwesome icon for search -->
+			  <i class="fa fa-search"></i>
 			</button>
 		  </div>
 		</div>
