--- a/src/app/components/destination/destination.component.html
+++ b/src/app/components/destination/destination.component.html
@@ -1,35 +1,18 @@
-<section>
-  <div class="container-fluid bg-image">
-    <div class="cont">
-      <h1 class="conta">DESTINATION</h1>
+<div class="container-fluid custom-container">
+  <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <h1 class="destination-heading">DESTINATION</h1>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8 custom-width">
       <app-typeheadfilter (keywordSelected)="onKeywordSelected($event)"></app-typeheadfilter>
     </div>
   </div>
-</section>
+</div>
 
-<!-- <div *ngIf="filteredTours.length">
-  <div class="container tourcard">
-    <div class="row">
-      <div class="col-lg-4 col-md-6 col-12 mb-4" *ngFor="let tour of filteredTours">
-        <div class="card">
-          <img [src]="tour.imageUrl" class="card-img-top" alt="{{ tour.name }}">
-          <div class="card-body d-flex flex-column">
-            <div class="d-flex justify-content-between">
-              <span class="location">{{ tour.location }}</span>
-              <span class="type">{{ tour.type }}</span>
-            </div>
-            <p class="card-text mt-2">{{ tour.description }}</p>
-            <div class="overlay">
-              <span>{{ tour.days }} Days</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 <div *ngIf="filteredTours.length">
-  <div class="container tourcard">
+  <div class="container tourcard mt-5">
     <div class="row">
       <div class="col-lg-3 col-md-6 col-12 mb-4" *ngFor="let tour of filteredTours">
         <div class="card">
@@ -38,18 +21,19 @@
             <div class="days-overlay">{{ tour.days }} Days</div>
           </div>
           <div class="card-body d-flex flex-column">
-            <div class="d-flex justify-content-between">
-              <span class="location">{{ tour.location }}</span>
-              <span class="type">{{ tour.type }}</span>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="location raleway">
+                <i class="fa-solid fa-location-dot"></i>{{ tour.location }}
+              </span>
+              <span class="type josefin-sans">{{ tour.type }}</span>
             </div>
-            <p class="card-text mt-2">{{ tour.description }}</p>
+            <p class="card-text mt-2 gupter-regular">{{ tour.description }}</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <div *ngIf="!filteredTours.length">
   <p>No tours found.</p>
