--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,23 @@
 <app-homecarousel></app-homecarousel>
-
-
-
-<section class="traveler-connect py-5">
+<div class="container-fluid mt-5">
+	<div class="row justify-content-center align-items-center text-center" style="height: 50vh;">
+	  <div class="col-md-8">
+		<div class="card">
+		  <div class="card-body">
+			<h5 class="card-title josefin-sans">Discover the World Like Never Before!</h5>
+			<p class="card-text crimson-text-regular">
+			  Welcome to Tour Experts, we turn your travel dreams into reality. Enjoy tailored adventures, stunning destinations, and unforgettable experiences crafted just for you.
+			</p>
+			<a href="/packages" class="btn btn-primary">Explore Packages</a>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </div>
+  
+  
+   <app-homepackage></app-homepackage>
+   <section class="traveler-connect py-5">
 	<div class="container threecards">
 	  <div class="row threecardsrow">
 		<div class="col-md-4 mb-4 ">
@@ -41,4 +56,3 @@
 	  </div>
 	</div>
   </section>
-  <app-homepackage></app-homepackage>
