--- a/src/app/components/homepackage/homepackage.component.scss
+++ b/src/app/components/homepackage/homepackage.component.scss
@@ -1,68 +1,56 @@
-/* Use flexbox for the container */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
 
-/* Default ordering for large screens */
-#card-1, #card-3, #card-4, #card-5, #card-6 {
-  order: 0;
-}
-
-#card-2 {
-  order: 1; /* Place PACKAGES card after the others by default */
-}
-
-/* Responsive ordering for medium and smaller screens */
-@media (max-width: 992px) {
-  /* Move the PACKAGES card to the top */
-  #card-2 {
-    order: -1; /* Move it to the top */
-  }
-}
-
-.card-img-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.card-img-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  text-align: center;
-}
-
-.card-title, .card-text {
-  margin: 0;
-  padding: 0.5rem;
-}
 
 .card-link {
   text-decoration: none;
   color: inherit;
 }
 
-.card-link .card {
-  transition: transform 0.2s, box-shadow 0.3s;
+.card {
+  transition: transform 0.3s, box-shadow 0.3s;
+  background: linear-gradient(135deg, #fcf9f9, #f1f3f5); /* Soft Sky */
 }
 
-.card-link:hover .card {
-  transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+.image-container {
+  position: relative;
+  overflow: hidden;
+}
+.packages{
+  font-family: "PT Serif", serif;
+  font-size: clamp(1.5rem, 3vw, 2rem);
+  color: black;
 }
 
-.card-link:hover .card-img-overlay {
-  background: rgba(14, 13, 13, 0.7); /* Darker overlay on hover */
+.card-img-top {
+  max-height: 200px;
+  object-fit: cover;
+  transition: transform 0.3s ease-out;
+  filter: brightness(0.8) contrast(1.2);
 }
 
-.card-link:hover .card-title {
-  color: #ffdd57; /* Change title color on hover */
+.zoom-effect {
+  transition: transform 0.3s ease-out;
 }
+
+.image-container:hover .zoom-effect {
+  transform: scale(1.1); /* Zoom effect */
+}
+
+.card-body {
+  position: relative;
+  z-index: 1; /* Ensure text is above the image */
+}
+
+.card-title {
+  font-size: 1.25rem;
+  font-family: "Poppins", sans-serif;
+
+}
+
+.card-text {
+  font-size: 0.8rem;
+    font-family: "Open Sans", sans-serif;
+    color: rgb(74, 73, 73);
+
+}
+
+
